// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichTextEditor does height stuff when color picker shown 1`] = `
"
        var scrollTop = $(window).scrollTop();
        $(window).scrollTop(scrollTop+46);
      "
`;

exports[`RichTextEditor hides toolbar when editor blurs 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <ZSSRichTextEditor
    _setMock={[Function]}
    editorItemsChanged={[Function]}
    html=""
    navigator={undefined}
    onBlur={[Function]}
    onFocus={[Function]}
    onHeightChange={undefined}
    onInputChange={[Function]}
    onLoad={[Function]}
    scrollEnabled={true}
  />
  <KeyboardSpacer
    onToggle={[Function]}
    topSpacing={0}
  />
</View>
`;

exports[`RichTextEditor renders 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <ZSSRichTextEditor
    _setMock={[Function]}
    editorItemsChanged={[Function]}
    html=""
    navigator={undefined}
    onBlur={[Function]}
    onFocus={[Function]}
    onHeightChange={undefined}
    onInputChange={[Function]}
    onLoad={[Function]}
    scrollEnabled={true}
  />
  <KeyboardSpacer
    onToggle={[Function]}
    topSpacing={0}
  />
</View>
`;

exports[`RichTextEditor renders toolbar when editor focused 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <ZSSRichTextEditor
    _setMock={[Function]}
    editorItemsChanged={[Function]}
    html=""
    navigator={undefined}
    onBlur={[Function]}
    onFocus={[Function]}
    onHeightChange={undefined}
    onInputChange={[Function]}
    onLoad={[Function]}
    scrollEnabled={true}
  />
  <RichTextToolbar
    active={Array []}
    insertLink={[Function]}
    onColorPickerShown={[Function]}
    redo={[Function]}
    setBold={[Function]}
    setItalic={[Function]}
    setOrderedList={[Function]}
    setTextColor={[Function]}
    setUnorderedList={[Function]}
    undo={[Function]}
  />
  <KeyboardSpacer
    onToggle={[Function]}
    topSpacing={0}
  />
</View>
`;

exports[`RichTextEditor should update active editor items in toolbar 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <ZSSRichTextEditor
    _setMock={[Function]}
    editorItemsChanged={[Function]}
    html=""
    navigator={undefined}
    onBlur={[Function]}
    onFocus={[Function]}
    onHeightChange={undefined}
    onInputChange={[Function]}
    onLoad={[Function]}
    scrollEnabled={true}
  />
  <RichTextToolbar
    active={
      Array [
        "italic",
      ]
    }
    insertLink={[Function]}
    onColorPickerShown={[Function]}
    redo={[Function]}
    setBold={[Function]}
    setItalic={[Function]}
    setOrderedList={[Function]}
    setTextColor={[Function]}
    setUnorderedList={[Function]}
    undo={[Function]}
  />
  <KeyboardSpacer
    onToggle={[Function]}
    topSpacing={0}
  />
</View>
`;

exports[`RichTextEditor should update active editor items in toolbar 2`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <ZSSRichTextEditor
    _setMock={[Function]}
    editorItemsChanged={[Function]}
    html=""
    navigator={undefined}
    onBlur={[Function]}
    onFocus={[Function]}
    onHeightChange={undefined}
    onInputChange={[Function]}
    onLoad={[Function]}
    scrollEnabled={true}
  />
  <RichTextToolbar
    active={
      Array [
        "bold",
      ]
    }
    insertLink={[Function]}
    onColorPickerShown={[Function]}
    redo={[Function]}
    setBold={[Function]}
    setItalic={[Function]}
    setOrderedList={[Function]}
    setTextColor={[Function]}
    setUnorderedList={[Function]}
    undo={[Function]}
  />
  <KeyboardSpacer
    onToggle={[Function]}
    topSpacing={0}
  />
</View>
`;
